# supply-chain

./: README.md  pyproject.toml  test.html
src/: create_tables.py  database.py  gui.py  main.py  models.py  mygoing.py  mygoing.spec  new_gui.py  new_gui.spec  schemas.py  stock.json
src/stock/: 上海.xlsx  北京.xlsx  常熟.xlsx  广州.xlsx  武汉.xlsx  济南.xlsx  珠海.xlsx  苏州.xlsx
